16 Feb 2012: 1.1.13 Miek Gieben <rdup@miek.nl>
   * Make rdup-tr compile when libnettle was not found (Miek Gieben)
   * Fix for very large inodes and filesizes (Kojedzinszky Richard)


21 Jan 2012: 1.1.12 Miek Gieben <rdup@miek.nl>
   * Test suite fixed
   * Fix Debian bug 627617


18 Feb 2011. 1.1.11 Miek Gieben <rdup@miek.nl>
   * Polish
   * rdup-up: added -q option. Be quiet when chown
     fails even when root (handy for backups on sshfs)


05 Dec 2010: 1.1.10 Miek Gieben <rdup@miek.nl>
   * One memleak fix removed (Tom Hendrikx)


04 Dec 2010: 1.1.9 Miek Gieben <rdup@miek.nl>
   * Fix whooping amount of memleaks (rdup-tr, rdup-up) (Crispin Boylan)


24 Oct 2010: 1.1.8 Miek Gieben <rdup@miek.nl>
   * rdup: Check for two more I/O errors when reading files
   * rdup: Permission fix for AIX (Crispin Boylan)
   * autoconf: Fix dirfd detection on mac OS X (still does not work)


21 Jun 2010: 1.1.7 Miek Gieben <rdup@miek.nl>
    * rdup-up: also create named pipes (fifo)


18 May 2010: 1.1.6 Miek Gieben <rdup@miek.nl>
    * rdup-simple: cleanups + portability


09 Apr 2010: 1.1.5 Miek Gieben <rdup@miek.nl>
    * compile fix


04 Apr 2010: 1.1.4 Miek Gieben <rdup@miek.nl>
    * re-touch timestamp after the backup is made when -a is used,
      otherwise it is done before the backup
    * spring cleaning, remove/clean BUGBUGs and some dead code and
      polish the documentation a bit
    * revert changes in mkpath.c to make FreeBSD happy
    * fix hardlinks in tar/pax output (they must come last)


22 Mar 2010: 1.1.3 Miek Gieben <rdup@miek.nl>
    * rdup: fix reset atime (-a)
    * rdup-simple: add -a (reset atime flag)
    * documentation bugfixes


14 Mar 2010: 1.1.2 Miek Gieben <rdup@miek.nl>
    * rdup: remove sig_atomic_t (build fix for ubuntu 8.04)
     (reported by Andrew Ittner)
    * rdup-up: fixed nasty bug in dir.c dir_parent()
     (leave caller's string alone)
    * rdup-up: rm.c: also use dir_parent()