@@ -1,7 +1,8 @@
 16 Feb 2012: 1.1.13 Miek Gieben <rdup@miek.nl>
    * Make rdup-tr compile when libnettle was not found (Miek Gieben)
    * Fix for very large inodes and filesizes (Kojedzinszky Richard)
-
+   * Fix tar/pax output when the filesize of files changes (rdup -Pgzip for
+     instance) (Reported by: Alejandro Pulver)
 
 21 Jan 2012: 1.1.12 Miek Gieben <rdup@miek.nl>
    * Test suite fixed
